--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
                 
                 <p>如果您有任何问题或需求，请随时<span class="blue-hover-text">
             微信联系
-            <img src="imgs/微信.png" alt="微信" class="hover-image"></span>，本站将竭诚为您服务。</p>
+            <img src="imgs/ " alt="微信" class="hover-image"></span>，本站将竭诚为您服务。</p>
                    <br><p>    </p>
                    <br><p>    </p>     
                    <br><p>    </p>              
