--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
                 <li class="nav-item"><a href="#section13" class="nav-link">甘肃新科技专修学院继续教育公需课、专业课</a></li>
                 <li class="nav-item"><a href="#section14" class="nav-link">枣庄市专业技术人员继续教育公需课</a></li>
                 <li class="nav-item"><a href="#section15" class="nav-link">2025宿州中小学转岗教师培训</a></li>
-                <li class="nav-item"><a href="#section16" class="nav-link">待加新项目</a></li>
+                <li class="nav-item"><a href="#section16" class="nav-link"><span class="year-tag">新</span>甘肃省庆阳市专业技术人员继续教育公需课、专业课</a></li>
                 <li class="nav-item"><a href="#section17" class="nav-link">待加新项目</a></li>
 
               
@@ -791,6 +791,24 @@
                 <!-- 其他内容省略 -->
             </div>
 
+
+            <div id="section16" class="content-section" style="display: none;">
+                <h1 class="content-title">甘肃省庆阳市专业技术人员继续教育公需课、专业课</h1>
+                <p>【甘肃省庆阳市专业技术人员继续教育公需课、专业课】，这个证书学分对以后评职称，评优非常重要，务必重视！</p>
+                <img src="imgs/兰州理工.png " alt="甘肃省庆阳市专业技术人员继续教育公需课、专业课图片" class="content-image">
+                <div class="custom-item">
+                    <p><br>
+                       <span style="font-weight: 600;font-size: 20px;color: #4A5361;">要求：</span>
+                       提供<span style="color: #DD2C00;font-size: 20px;font-weight: 600;">正确</span>的账号与密码，账号<span style="color: #DD2C00;font-size: 20px;font-weight: 600;">是身份证号</span>，不记得就<span style="color: #DD2C00;font-size: 20px;font-weight: 600;">在👇下方链接修改</span>
+                       <br><span style="font-weight: 600;font-size: 20px;color: #4A5361;">培训网址🌐：</span><a href="https://gsqy.chinamde.cn/" target="_blank">甘肃省庆阳市专业技术人员继续教育网络平台   https://gsqy.chinamde.cn/     可直接点击</a>
+                       <br><span style="font-weight: 600;font-size: 20px;color: #4A5361;">截止时间⏰：</span><span style="color: #DD2C00;font-size: 20px;font-weight: 600;">未标明，建议尽早学习</span>。
+                    </p>
+                </div>
+
+
+              
+                <!-- 其他内容省略 -->
+            </div>
 
 
 
