--- a/index.html
+++ b/index.html
@@ -522,7 +522,10 @@
                 <li class="nav-item"><a href="#section18" class="nav-link">山西省运城市2025年中小学幼儿园教师全员混合培训项目</a></li>
                 <li class="nav-item"><a href="#section19" class="nav-link">云南省中小学思政课教师能力提升网络培训</a></li>
                 <li class="nav-item"><a href="#section20" class="nav-link">好医生继续医学教育</a></li>
-                <li class="nav-item"><a href="#section21" class="nav-link">待加新项目</a></li>
+                <li class="nav-item"><a href="#section21" class="nav-link">安徽继续教育在线</a></li>
+                <li class="nav-item"><a href="#section22" class="nav-link">中国教师研修网</a></li>
+                <li class="nav-item"><a href="#section23" class="nav-link">待加新项目</a></li>
+                <li class="nav-item"><a href="#section24" class="nav-link">待加新项目</a></li>
               
 
               
@@ -905,6 +908,39 @@
 
                 <!-- 其他内容省略 -->
             </div>
+
+            <div id="section21" class="content-section" style="display: none;">
+                <h1 class="content-title">安徽继续教育在线</h1>
+                <p>【安徽继续教育在线】，这个证书学分对以后评职称，评优非常重要，务必重视！</p>
+                <img src="imgs/安徽继续教育在线.png  " alt="安徽继续教育在线" class="content-image">
+                <div class="custom-item">
+                    <p><br>
+                       <span style="font-weight: 600;font-size: 20px;color: #4A5361;">要求：</span>
+                       提供<span style="color: #DD2C00;font-size: 20px;font-weight: 600;">正确</span>的账号与密码，账号<span style="color: #DD2C00;font-size: 20px;font-weight: 600;">是身份证号 </span>，不记得就<span style="color: #DD2C00;font-size: 20px;font-weight: 600;">在👇下方链接修改</span>
+                       <br><span style="font-weight: 600;font-size: 20px;color: #4A5361;">培训网址🌐：</span><a href=" https://www.ahjxjy.cn/">安徽继续教育在线    https://www.ahjxjy.cn/      可直接点击</a>
+                       <br><span style="font-weight: 600;font-size: 20px;color: #4A5361;">截止时间⏰：</span><span style="color: #DD2C00;font-size: 20px;font-weight: 600;">未标明，尽早学习</span>。
+                    </p>
+                </div>
+
+                <!-- 其他内容省略 -->
+            </div>
+
+            <div id="section22" class="content-section" style="display: none;">
+                <h1 class="content-title">中国教师研修网</h1>
+                <p>【中国教师研修网】，这个证书学分对以后评职称，评优非常重要，务必重视！</p>
+                <img src="imgs/中国教师研修网.png  " alt="中国教师研修网" class="content-image">
+                <div class="custom-item">
+                    <p><br>
+                       <span style="font-weight: 600;font-size: 20px;color: #4A5361;">要求：</span>
+                       提供<span style="color: #DD2C00;font-size: 20px;font-weight: 600;">正确</span>的账号与密码，账号<span style="color: #DD2C00;font-size: 20px;font-weight: 600;">是手机号 </span>，不记得就<span style="color: #DD2C00;font-size: 20px;font-weight: 600;">在👇下方链接修改</span>
+                       <br><span style="font-weight: 600;font-size: 20px;color: #4A5361;">培训网址🌐：</span><a href=" https://ipx.yanxiu.com/train/login">中国教师研修网    https://ipx.yanxiu.com/train/login      可直接点击</a>
+                       <br><span style="font-weight: 600;font-size: 20px;color: #4A5361;">截止时间⏰：</span><span style="color: #DD2C00;font-size: 20px;font-weight: 600;">看具体项目，尽早学习</span>。
+                    </p>
+                </div>
+
+                <!-- 其他内容省略 -->
+            </div>
+
 
 
 
